<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:srcCompat="@drawable/ic_database" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#2196F3" />

    <TextView
        android:id="@+id/tvApplicationInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:autoLink="web|email"
        android:text="@string/describe"
        android:textColor="#2196F3"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/dbFilePath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/unopened_database_tip" />
</LinearLayout>
